--- a/pom.xml
+++ b/pom.xml
@@ -388,6 +388,16 @@
           </arguments>
         </configuration>
       </plugin>
+	<plugin>
+		<groupId>org.codehaus.mojo</groupId>
+		<artifactId>cobertura-maven-plugin</artifactId>
+		<version>2.7</version>
+		<configuration>
+			<formats>
+				<format>xml</format>
+			</formats>
+		</configuration>
+	</plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
